tests/samples/positive/visibility/reexport_import.ax
module reexport_import;

import samplelib.reexport_facade as facade;

fn main() -> i32 {
    let value: facade.Count = facade.add_two(0);
    let pair: facade.PairI32 = facade.PairI32 {
        left: value,
        right: facade.base,
    };
    let mode = facade.Mode.ready;
    if mode != facade.Mode.ready {
        return 1;
    }
    return pair.left + pair.right - 82;
}
