tests/samples/negative/core/main_argv_not_pointer.ax
module main_argv_not_pointer;

fn main(argc: i32, argv: i32) -> i32 {
    return argc + argv;
}
